syntax = "proto3";

package usermgmt.v2;

option java_package = "com.manabie.libs.proto.usermgmt.v2";
option go_package = "github.com/manabie-com/backend/pkg/manabuf/usermgmt/v2;upb";

enum UserGroup {
  USER_GROUP_NONE = 0;
  USER_GROUP_STUDENT = 1;
  USER_GROUP_TUTOR = 2;
  USER_GROUP_STAFF = 3;
  USER_GROUP_ADMIN = 4;
  USER_GROUP_TEACHER = 5;
  USER_GROUP_PARENT = 6;
  USER_GROUP_CONTENT_ADMIN = 7;
  USER_GROUP_CONTENT_STAFF = 8;
  USER_GROUP_SALES_ADMIN = 9;
  USER_GROUP_SALES_STAFF = 10;
  USER_GROUP_CS_ADMIN = 11;
  USER_GROUP_CS_STAFF = 12;
  USER_GROUP_SCHOOL_ADMIN = 13;
  USER_GROUP_SCHOOL_STAFF = 14;
  USER_GROUP_ORGANIZATION_MANAGER = 15;
}

enum FamilyRelationship {
  FAMILY_RELATIONSHIP_NONE = 0;
  FAMILY_RELATIONSHIP_FATHER = 1;
  FAMILY_RELATIONSHIP_MOTHER = 2;
  FAMILY_RELATIONSHIP_GRANDFATHER = 3;
  FAMILY_RELATIONSHIP_GRANDMOTHER = 4;
  FAMILY_RELATIONSHIP_UNCLE = 5;
  FAMILY_RELATIONSHIP_AUNT = 6;
  FAMILY_RELATIONSHIP_OTHER = 7;
}

enum StudentEnrollmentStatus {
  STUDENT_ENROLLMENT_STATUS_NONE = 0;
  STUDENT_ENROLLMENT_STATUS_POTENTIAL = 1;
  STUDENT_ENROLLMENT_STATUS_ENROLLED = 2;
  STUDENT_ENROLLMENT_STATUS_WITHDRAWN = 3;
  STUDENT_ENROLLMENT_STATUS_GRADUATED = 4;
  STUDENT_ENROLLMENT_STATUS_LOA = 5;
  STUDENT_ENROLLMENT_STATUS_TEMPORARY = 6;
  STUDENT_ENROLLMENT_STATUS_NON_POTENTIAL = 7;
}

enum Gender {
  NONE = 0;
  MALE = 1;
  FEMALE = 2;
}

enum AddressType {
  HOME_ADDRESS = 0;
  BILLING_ADDRESS = 1;
}

enum UserTagType {
  USER_TAG_TYPE_NONE = 0;
  USER_TAG_TYPE_STUDENT = 1;
  USER_TAG_TYPE_PARENT = 2;
  USER_TAG_TYPE_STUDENT_DISCOUNT = 3;
  USER_TAG_TYPE_PARENT_DISCOUNT = 4;
  USER_TAG_TYPE_STAFF = 5;
}
